userEditor basis
